// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.emotion-0 {
  color: primary;
  background: none;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
}

<button
  class="emotion-0"
  data-testid="styled-button"
>
  content
</button>
`;

exports[`renders snapshot 1`] = `
.emotion-0 {
  color: primary;
  background: none;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
}

<div>
  <button
    class="emotion-0"
    data-testid="styled-button"
  >
    click me
  </button>
</div>
`;
